<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView
        android:id="@+id/activity_register_user_icon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activity_register_icon"
        android:contentDescription="@string/app_name"/>
    
    <EditText
        android:id="@+id/ac_re_user_name"
        android:layout_width="fill_parent"
        android:hint="@string/activity_register_user_name_hint"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/user"
        android:layout_below="@id/activity_register_user_icon"
        android:drawablePadding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"/>
    
    <EditText
        android:id="@+id/ac_re_user_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/activity_register_user_pass_hint"
        android:layout_below="@id/ac_re_user_name"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"/>
    
    <EditText
        android:id="@+id/ac_re_user_re_password"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:hint="@string/activity_register_user_re_pass_hint"
        android:layout_height="wrap_content"
        android:layout_below="@id/ac_re_user_password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"/>
    
    <ImageButton
        android:id="@+id/ac_re_user_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button1"
        android:layout_below="@id/ac_re_user_re_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/ac_re_user_no_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_register_user_no_re"
        android:layout_below="@id/ac_re_user_ok"
        android:layout_alignRight="@id/ac_re_user_ok"
        android:background="@null"/>
    
</RelativeLayout>
